Add default starter SCSS files

--- a/themes/touchpoint/resources/scss/theme.scss
+++ b/themes/touchpoint/resources/scss/theme.scss
@@ -1,1 +1,22 @@
-body {}
+/* ------------------------------------------------------------ *\
+	Generic
+\* ------------------------------------------------------------ */
+
+@import 'generic/variables';
+@import 'generic/functions';
+@import 'generic/mixins';
+@import 'generic/reset';
+@import 'generic/fonts';
+@import 'generic/base';
+@import 'generic/helpers';
+
+/* ------------------------------------------------------------ *\
+	Components
+\* ------------------------------------------------------------ */
+
+@import 'components/main';
+@import 'components/wrapper';
+@import 'components/shell';
+@import 'components/header';
+@import 'components/nav';
+@import 'components/logo';
