--- a/themes/touchpoint/resources/scss/generic/_variables.scss
+++ b/themes/touchpoint/resources/scss/generic/_variables.scss
@@ -1,4 +1,4 @@
-$font-size-base             : 16px;
+$font-size-base             : 24px;
 $font-weight-base           : 400;
 $line-height-base           : 1.2;
 
@@ -9,8 +9,7 @@ $t-duration                 : 0.4s;
 
 $c-black                    : #000;
 $c-white                    : #fff;
-$c-base                     : #055590;
-$c-red                      : #f00;
+$c-grey                     : #C5C5C5;
 
 $responsive-ios             : 812px;
 
