--- a/themes/touchpoint/resources/scss/generic/_base.scss
+++ b/themes/touchpoint/resources/scss/generic/_base.scss
@@ -13,7 +13,7 @@ body {
 	font-weight: $font-weight-base;
 	font-size: $font-size-base;
 	line-height: $line-height-base;
-	color: $c-base;
+	color: $c-black;
 }
 
 a {
