Add section gallery progress

--- a/themes/touchpoint/resources/scss/theme.scss
+++ b/themes/touchpoint/resources/scss/theme.scss
@@ -21,3 +21,6 @@
 @import 'components/nav';
 @import 'components/logo';
 @import 'components/menu-toggle';
+@import 'components/section-gallery';
+@import 'components/btn';
+@import 'components/secondary-nav';
