--- a/themes/touchpoint/resources/scss/theme.scss
+++ b/themes/touchpoint/resources/scss/theme.scss
@@ -24,3 +24,4 @@
 @import 'components/section-gallery';
 @import 'components/btn';
 @import 'components/secondary-nav';
+@import 'components/gallery';
