--- a/themes/touchpoint/resources/scss/components/_section-gallery.scss
+++ b/themes/touchpoint/resources/scss/components/_section-gallery.scss
@@ -8,13 +8,28 @@
 	.section__inner {
 		display: flex;
 		gap: 20px;
+
+		@include breakpoint-down(small-desktop) {
+			flex-direction: column;
+		}
 	}
 
 	.section__aside {
 		width: 15%;
+
+		@include breakpoint-down(small-desktop) {
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
 	}
 
 	.section__body {
 		width: 85%;
+
+		@include breakpoint-down(small-desktop) {
+			width: 100%
+		}
 	}
 }
