--- a/themes/touchpoint/resources/scss/components/_gallery.scss
+++ b/themes/touchpoint/resources/scss/components/_gallery.scss
@@ -12,38 +12,32 @@
 	}
 
 	.gallery_item {
-		min-height: 570px;
+		max-height: 570px;
 		box-sizing: border-box;
 		overflow: hidden;
 
-		@include breakpoint-down(large-desktop) {
-			min-height: 420px;
-		}
-
-		@include breakpoint-down(small-desktop) {
-			min-height: 280px;
-		}
 	}
 
 	.gallery_item img {
 		width: 100%;
 		height: 100%;
+		border-radius: 45px;
 	}
 
 	.gallery_item:nth-child(5n+1) {
 		grid-column: 1 / -1;
-		min-height: 710px;
+		max-height: 710px;
 
 		@include breakpoint-down(large-desktop) {
-			min-height: 540px;
+			max-height: 540px;
 		}
 
 		@include breakpoint-down(small-desktop) {
-			min-height: 420px;
+			max-height: 420px;
 		}
 
 		@include breakpoint-down(mobile-medium) {
-			min-height: 120px;
+			max-height: 120px;
 		}
 	}
 
