--- a/themes/touchpoint/resources/scss/theme.scss
+++ b/themes/touchpoint/resources/scss/theme.scss
@@ -25,3 +25,6 @@
 @import 'components/btn';
 @import 'components/secondary-nav';
 @import 'components/gallery';
+@import 'components/popup';
+@import 'components/btn-close';
+@import 'components/file-upload';
