--- a/themes/touchpoint/resources/scss/components/_gallery.scss
+++ b/themes/touchpoint/resources/scss/components/_gallery.scss
@@ -15,12 +15,12 @@
 		max-height: 570px;
 		box-sizing: border-box;
 		overflow: hidden;
-
 	}
 
 	.gallery_item img {
 		width: 100%;
 		height: 100%;
+		object-fit: cover;
 		border-radius: 45px;
 	}
 
@@ -34,10 +34,6 @@
 
 		@include breakpoint-down(small-desktop) {
 			max-height: 420px;
-		}
-
-		@include breakpoint-down(mobile-medium) {
-			max-height: 120px;
 		}
 	}
 
@@ -64,6 +60,7 @@
 	.gallery_item:nth-child(5n+5) {
 		@include breakpoint-down(tablet) {
 			grid-column: 1 / -1;
+			max-height: 420px;
 		}
 	}
 }
