Add categories select to popup

--- a/themes/touchpoint/resources/scss/components/_file-upload.scss
+++ b/themes/touchpoint/resources/scss/components/_file-upload.scss
@@ -8,7 +8,8 @@
 	text-align: center;
 	font-size: 16px;
 
-	.file_title {
+	.file_title,
+	.file__category-options {
 		padding: 10px;
 		margin-bottom: 20px;
 		border: 1px solid #dadada;
